Improve unconscious creature styling. Capitalize only first letter of notes

--- a/src/App.css
+++ b/src/App.css
@@ -287,6 +287,14 @@ a:hover {
   align-items: center;
 }
 
+.expanded-creature--status {
+  text-decoration: underline;
+  text-decoration-color: #822000;
+  text-decoration-style: double;
+  color: black;
+  padding-top: 4px;
+}
+
 .expanded-creature--active-icon {
   padding-left: 10px;
 }
@@ -432,11 +440,14 @@ a:hover {
 }
 
 .creature-note-list--note {
-  text-transform: capitalize;
   text-decoration: underline;
   text-decoration-color: #822000;
   text-decoration-style: double;
   color: black;
+}
+
+.creature-note-list--note::first-letter {
+  text-transform: uppercase;
 }
 
 .creature-note-list--button {
