--- a/src/App.css
+++ b/src/App.css
@@ -191,6 +191,7 @@ a:hover {
 
 .create-creature-form--item {
   display: flex;
+  align-items: baseline;
 }
 
 .create-creature-form--item__text {
@@ -213,8 +214,18 @@ a:hover {
   box-shadow: 0 0 5px #979AA4;
 }
 
+.create-creature-form--input__small-number {
+  padding-left: 5px;
+  font-weight: bold;
+}
+
+.create-creature-form--multiplier {
+  margin-right: 5px;
+  font-weight: bold;
+}
+
 .create-creature-form--input__error {
-  border: 4px solid red;
+  border: 2px solid red;
 }
 
 /*
@@ -239,6 +250,10 @@ a:hover {
 
   .create-creature-form--input {
     text-align: center;
+  }
+  
+  .create-creature-form--input__small-number {
+    text-align: left;
   }
 }
 
