--- a/src/App.css
+++ b/src/App.css
@@ -180,38 +180,29 @@ a:hover {
 /* Create creature form */
 
 .create-creature-form {
-  width: 60%;
+  width: 80%;
   margin-top: 40px;
-  grid-gap: 11px;
-  grid-row-gap: 10px;
+  grid-gap: 35px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, 25px);
-  justify-content: space-evenly;
+  grid-template-columns: 20% 10% 10% 10%;
+  justify-content: center;
 }
 
 .create-creature-form--item {
   display: flex;
-  align-items: baseline;
-}
-
-.create-creature-form--item__text {
-  grid-column: span 6;
-}
-
-.create-creature-form--item__number {
-  grid-column: span 4;
-}
-
-.create-creature-form--item__small-number {
-  grid-column: span 2;
+  flex-direction: column;
 }
 
 .create-creature-form--input {
   border: 2px solid #822000;
   padding: 10px;
-  width: 100%;
   border-radius: 15px;
   box-shadow: 0 0 5px #979AA4;
+}
+
+.create-creature-form--label {
+  margin-bottom: 5px;
+  margin-left: 10px;
 }
 
 .create-creature-form--input__small-number {
@@ -228,12 +219,23 @@ a:hover {
   border: 2px solid red;
 }
 
+@media only screen and (max-width: 1175px) {
+  .create-creature-form {
+    grid-template-columns: 30% 15% 15% 15%;
+  }
+}
+
 /*
  * Ensure create creature form is centered on multiple rows on small screens
  */
 @media only screen and (max-width: 825px) {
   .create-creature-form {
     grid-template-columns: repeat(6, 25px);
+    grid-row-gap: 10px;
+  }
+
+  .create-creature-form--item {
+    align-items: center;
   }
 
   .create-creature-form--item__text {
@@ -248,12 +250,8 @@ a:hover {
     grid-column: 3 / span 2;
   }
 
-  .create-creature-form--input {
-    text-align: center;
-  }
-  
-  .create-creature-form--input__small-number {
-    text-align: left;
+  .create-creature-form--label {
+    margin-left: 0px;
   }
 }
 
