--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,18 @@ a:hover {
   color: #822000;
 }
 
-.App {
+.main-footer-wrapper {
+  display: flex;
+  align-items: center;
+  flex-flow: column;
+}
+
+.main {
   display: flex;
   align-items: center;
   flex-flow: column;
   padding-top: 44px;
+  width: 100%;
 }
 
 /* Battle toolbar */
@@ -48,7 +55,7 @@ a:hover {
  * On screen keyboards and the sticky bar leave a very small viewport.
  */
 @media only screen and (max-width: 600px) and (orientation: landscape) {
-  .App {
+  .main {
     padding-top: 0px;
   }
 
@@ -180,38 +187,29 @@ a:hover {
 /* Create creature form */
 
 .create-creature-form {
-  width: 60%;
+  width: 80%;
   margin-top: 40px;
-  grid-gap: 11px;
-  grid-row-gap: 10px;
+  grid-gap: 35px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, 25px);
-  justify-content: space-evenly;
+  grid-template-columns: 20% 10% 10% 10%;
+  justify-content: center;
 }
 
 .create-creature-form--item {
   display: flex;
-  align-items: baseline;
-}
-
-.create-creature-form--item__text {
-  grid-column: span 6;
-}
-
-.create-creature-form--item__number {
-  grid-column: span 4;
-}
-
-.create-creature-form--item__small-number {
-  grid-column: span 2;
+  flex-direction: column;
 }
 
 .create-creature-form--input {
   border: 2px solid #822000;
   padding: 10px;
-  width: 100%;
   border-radius: 15px;
   box-shadow: 0 0 5px #979AA4;
+}
+
+.create-creature-form--label {
+  margin-bottom: 5px;
+  margin-left: 10px;
 }
 
 .create-creature-form--input__small-number {
@@ -219,13 +217,28 @@ a:hover {
   font-weight: bold;
 }
 
+.create-creature-form--multiplier-container {
+  display: flex;
+  align-items: baseline;
+}
+
 .create-creature-form--multiplier {
   margin-right: 5px;
   font-weight: bold;
 }
 
+.create-creature-form--item__multiplier .create-creature-form--label {
+  margin-left: 0px;
+}
+
 .create-creature-form--input__error {
   border: 2px solid red;
+}
+
+@media only screen and (max-width: 1175px) {
+  .create-creature-form {
+    grid-template-columns: 30% 15% 15% 15%;
+  }
 }
 
 /*
@@ -234,6 +247,11 @@ a:hover {
 @media only screen and (max-width: 825px) {
   .create-creature-form {
     grid-template-columns: repeat(6, 25px);
+    grid-row-gap: 10px;
+  }
+
+  .create-creature-form--item {
+    align-items: center;
   }
 
   .create-creature-form--item__text {
@@ -244,16 +262,12 @@ a:hover {
     grid-column: 2 / span 4;
   }
 
-  .create-creature-form--item__small-number {
+  .create-creature-form--item__multiplier {
     grid-column: 3 / span 2;
   }
 
-  .create-creature-form--input {
-    text-align: center;
-  }
-  
-  .create-creature-form--input__small-number {
-    text-align: left;
+  .create-creature-form--label {
+    margin-left: 0px;
   }
 }
 
@@ -281,6 +295,7 @@ a:hover {
   padding: 10px;
   background-color: #e6d898;
   display: flex;
+  flex-flow: row-reverse;
   align-items: flex-start;
   justify-content: space-between;
 }
@@ -401,6 +416,7 @@ a:hover {
   text-align: left;
   text-transform: capitalize;
   margin-top: 4px;
+  margin-bottom: 0px;
 }
 
 .collapsed-creature--name__dead {
@@ -500,4 +516,11 @@ a:hover {
   font-size: 12px;
   line-height: 14px;
   padding: 10px;
+}
+
+/* Hide keyboard shortcuts from devices unlikely to have a physical keyboard */ 
+@media only screen and (max-width: 1024px) {
+  .footer-text--shortcuts {
+    display: none;
+  }
 }
