--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,7 @@ a:hover {
 
 .battle-toolbar--button {
   padding: 4px;
-  background-color: #e6d898;
+  background-color: #EBE1AD;
 }
 
 .battle-toolbar--button__reset {
@@ -163,7 +163,7 @@ a:hover {
   grid-column: span 2;
   padding: 8px;
   display: flex;
-  background-color: #e6d898;
+  background-color: #EBE1AD;
 }
 
 .creature-toolbar--button__dead {
@@ -299,7 +299,7 @@ a:hover {
   border-radius: 15px;
   margin: 60px 0 10px 0;
   padding: 10px;
-  background-color: #e6d898;
+  background-color: #EBE1AD;
   display: flex;
   flex-flow: row;
   align-items: flex-start;
@@ -505,15 +505,18 @@ a:hover {
 /* Health points */
 
 .health-points--fine {
-  color: green;
+  color: #004D00;
+  font-weight: bold;
 }
 
 .health-points--damaged {
-  color: orangered;
+  color: black;
+  font-weight: bold;
 }
 
 .health-points--critical {
   color: #822000;
+  font-weight: bold;
 }
 
 /* Footer */
