--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,10 @@ a:hover {
   font-size: 16px;
 }
 
+.hidden {
+  display: none;
+}
+
 /* Battle toolbar */
 .battle-toolbar {
   display: flex;
@@ -134,6 +138,22 @@ a:hover {
   background-color: transparent;
   cursor: auto;
   border: 2px dashed #822000;
+}
+
+.battle-toolbar--options-dropdown {
+  position: absolute;
+  top: 50px;
+  right: 5%;
+  border-top: 2px solid #ebe2d3;
+  border-bottom: 2px solid #822000;
+  border-left: 2px solid #822000;
+  border-right: 2px solid #822000;
+  padding: 10px;
+  background: #ebe2d3;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  height: 140px;
 }
 
 /* Creature toolbar */
