--- a/src/App.css
+++ b/src/App.css
@@ -145,19 +145,22 @@ a:hover {
   flex-direction: column;
   align-items: center;
   width: 64px;
+  height: 245px;
 }
 
 .battle-toolbar--options-dropdown {
-  border-top: 2px solid #ebe2d3;
   border-bottom: 2px solid #822000;
   border-left: 2px solid #822000;
   border-right: 2px solid #822000;
-  padding: 10px;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  padding: 20px 10px;
   background: #ebe2d3;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  margin-top: 2px;
+  margin-top: 1px;
+  height: 100%;
 }
 
 .battle-toolbar--button__options {
