--- a/src/App.css
+++ b/src/App.css
@@ -578,9 +578,10 @@ a:hover {
   width: 100%;
   display: flex;
   position: fixed;
-  top: 53px;
+  top: 51px;
   background: red;
   padding: 10px 0;
+  border-top: 2px solid #822000;
   border-bottom: 2px solid #822000;
   justify-content: space-between;
   align-items: flex-start;
@@ -603,10 +604,12 @@ a:hover {
   font-weight: bold;
   display: flex;
   flex-direction: column;
+  width: 75%;
 }
 
 .error-bar--error {
   margin-bottom: 10px;
+  word-break: break-word;
 }
 
 .error-bar--error__last {
